--- a/webshift/src/main/resources/application.properties
+++ b/webshift/src/main/resources/application.properties
@@ -24,3 +24,10 @@ spring.jpa.hibernate.ddl-auto=update
 # Nível de informação do log
 logging.level.org.hibernate.SQL=INFO
 logging.level.org.hibernate.type=INFO
+
+
+spring.datasource.hikari.connectionTimeout=1000
+spring.datasource.hikari.validationTimeout=1000
+spring.datasource.hikari.maxLifetime=1800000
+spring.datasource.hikari.leakDetectionThreshold=5
+spring.datasource.hikari.maximumPoolSize=1
